# Boke

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
crates/boke-core/: Cargo.toml
crates/boke-core/src/: lib.rs  opml.rs  utils.rs
crates/boke-core/src/db/: mod.rs  pool.rs  postgres.rs  sqlite.rs
crates/boke-core/src/feed/: atom.rs  date.rs  detector.rs  discovery.rs  error.rs  mod.rs  model.rs  rss1.rs  rss2.rs
crates/boke-core/src/models/: article.rs  feed.rs  folder.rs  mod.rs
crates/boke-core/src/services/: articles.rs  feeds.rs  folders.rs  mod.rs
crates/boke-server/: Cargo.toml
crates/boke-server/src/: config.rs  error.rs  main.rs
crates/boke-server/src/routes/: articles.rs  feeds.rs  folders.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: articles.rs  feeds.rs  folders.rs  mod.rs  tags.rs
src-tauri/src/db/: mod.rs
src-tauri/src/feed/: atom.rs  date.rs  discovery.rs  mod.rs  model.rs  rss1.rs  rss2.rs
src/api/: articles.ts  feeds.ts  folders.ts  search.ts  tags.ts
src/components/article/: ArticleContent.tsx  CodeBlock.tsx
src/components/feed/: AddFeedDialog.tsx
src/components/layout/: ArticleList.tsx  ReaderPane.tsx  Sidebar.tsx
src/components/search/: SearchBar.tsx
src/components/tags/: TagBadge.tsx  TagManager.tsx
src/components/ui/: KeyboardShortcuts.tsx  Skeleton.tsx  UpdateBanner.tsx
src/hooks/: useKeyboardNav.ts  useTheme.ts
src/lib/: api.ts  constants.ts  http.ts  platform.ts  sidebarItems.ts  tauri.ts
src/styles/: index.css
src/types/: index.ts
