[package]
name = "boke"
version = "0.1.0"
description = "A minimalistic RSS reader desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "boke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
quick-xml = { version = "0.37", features = ["serialize"] }
scraper = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
regex = "1.12.3"
