[package]
name = "boke"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A minimalistic RSS reader desktop app"

[lib]
name = "boke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library
boke-core = { path = "../crates/boke-core", features = ["sqlite"] }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tokio.workspace = true
chrono.workspace = true
url.workspace = true
log.workspace = true

# Feed parsing (still used locally)
quick-xml.workspace = true
scraper.workspace = true
reqwest.workspace = true

# Text processing
regex = "1.12.3"
